--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-loading-mask",
+  "name": "variable-loading-mask",
   "version": "1.0.6",
   "description": "",
   "main": "./src/index.js",
