--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/Alan1034/VueNpmFrame.git"
+    "url": "https://github.com/Alan1034/LoadingMask"
   },
   "dependencies": {}
 }
