--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "variable-loading-mask",
   "version": "2.0.0",
   "description": "",
-  "main": "./dist/index.umd.cjs",
+  "main": "./src/index.ts",
   "type": "module",
   "scripts": {
     "build": "cross-env CURRENT_ENV=prod run-p type-check && run-p build-only",
@@ -38,23 +38,24 @@
     "tsx": "^4.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.4.2",
-    "vite-plugin-image-optimizer": "^1.1.6"
+    "vite-plugin-image-optimizer": "^1.1.6",
+    "vue": "^3.5.4"
+  },
+  "peerDependencies": {
+    "@vue/composition-api": "^1.0.0-rc.1",
+    "vue": "^2.0.0 || >=3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@vue/composition-api": {
+      "optional": true
+    }
+  },
+  "dependencies": {
+    "vue-demi": "latest"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Alan1034/LoadingMask"
   },
-  "typings": "./dist/index.d.ts",
-  "module": "./dist/index.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs",
-      "types": "./dist/index.d.ts"
-    },
-    "./style": "./dist/style.css"
-  },
-  "files": [
-    "/dist"
-  ]
+  "typings": "./publish/index.d.ts"
 }
