--- a/package.json
+++ b/package.json
@@ -42,16 +42,7 @@
     "vue": "^3.5.4"
   },
   "peerDependencies": {
-    "@vue/composition-api": "^1.0.0-rc.1",
-    "vue": "^2.0.0 || >=3.0.0"
-  },
-  "peerDependenciesMeta": {
-    "@vue/composition-api": {
-      "optional": true
-    }
-  },
-  "dependencies": {
-    "vue-demi": "latest"
+    "vue": "^>=3.0.0"
   },
   "repository": {
     "type": "git",
