--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "variable-loading-mask",
   "version": "1.0.6",
   "description": "",
-  "main": "./src/index.js",
+  "main": "./dist/index.umd.cjs",
+  "type": "module",
   "scripts": {
-    "serve": "webpack-dev-server --config config/webpack.dev.js",
-    "build": "webpack --config config/webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cross-env CURRENT_ENV=prod run-p type-check && run-p build-only",
+    "test:e2e": "playwright test",
+    "build-only": "vite build",
+    "type-check": "tsc --noEmit -p tsconfig.json --composite false",
+    "link": "tsx script/link.ts && yarn link",
+    "unlink": "tsx script/unlinkModule.ts && yarn unlink && run-p build",
+    "linkNode": "tsx script/linkNode.ts && yarn link && run-p dev",
+    "unlinkNode": "tsx script/unlinkNode.ts && yarn unlink && run-p buildts",
+    "dev": "tsc -w -p .",
+    "buildts": "rimraf dist && tsc -p ."
   },
   "keywords": [
     "loading-mask",
@@ -16,10 +24,41 @@
   ],
   "author": "chendeli419287484@qq.com",
   "license": "ISC",
-  "devDependencies": {},
+  "devDependencies": {
+    "@playwright/test": "^1.54.1",
+    "@types/node": "^24.1.0",
+    "@vitejs/plugin-legacy": "^5.4.2",
+    "@vitejs/plugin-vue2": "^2.3.3",
+    "@vitejs/plugin-vue2-jsx": "^1.1.1",
+    "chalk": "^5.4.1",
+    "cross-env": "^7.0.3",
+    "less": "^4.4.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^6.0.1",
+    "sass-embedded": "^1.89.2",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "vite": "^5.4.19",
+    "vite-plugin-image-optimizer": "^2.0.2"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Alan1034/LoadingMask"
   },
-  "dependencies": {}
+  "peerDependencies": {
+    "vue": "^2.7.0-0"
+  },
+  "typings": "./dist/index.d.ts",
+  "module": "./dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
+    },
+    "./style": "./dist/style.css"
+  },
+  "files": [
+    "/dist"
+  ]
 }
