--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "variable-loading-mask",
   "version": "1.0.8",
   "description": "",
-  "main": "./dist/index.umd.cjs",
+  "main": "./src/index.ts",
   "type": "module",
   "scripts": {
     "build": "cross-env CURRENT_ENV=prod run-p type-check && run-p build-only",
@@ -48,17 +48,5 @@
   "peerDependencies": {
     "vue": "^2.7.0-0"
   },
-  "typings": "./dist/index.d.ts",
-  "module": "./dist/index.js",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs"
-    },
-    "./style": "./dist/style.css"
-  },
-  "files": [
-    "/dist"
-  ]
+  "typings": "./publish/index.d.ts"
 }
