--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "variable-loading-mask",
   "version": "2.0.1",
   "description": "",
-  "main": "./dist/index.umd.cjs",
+  "main": "./src/index.ts",
   "type": "module",
   "scripts": {
     "build": "cross-env CURRENT_ENV=prod run-p type-check && run-p build-only",
@@ -25,21 +25,21 @@
   "author": "chendeli419287484@qq.com",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.36.1",
-    "@types/node": "^22.5.2",
-    "@vitejs/plugin-legacy": "^5.4.2",
-    "@vitejs/plugin-vue": "^5.1.3",
-    "@vitejs/plugin-vue-jsx": "^4.0.1",
-    "chalk": "^5.3.0",
-    "cross-env": "^7.0.3",
-    "less": "^4.2.0",
+    "@playwright/test": "^1.55.0",
+    "@types/node": "^24.3.0",
+    "@vitejs/plugin-legacy": "^7.2.1",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue-jsx": "^5.1.1",
+    "chalk": "^5.6.0",
+    "cross-env": "^10.0.0",
+    "less": "^4.4.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
-    "tsx": "^4.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.4.2",
-    "vite-plugin-image-optimizer": "^1.1.6",
-    "vue": "^3.5.4"
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.4",
+    "vite-plugin-image-optimizer": "^2.0.2",
+    "vue": "^3.5.21"
   },
   "peerDependencies": {
     "vue": "^>=3.0.0"
@@ -48,17 +48,5 @@
     "type": "git",
     "url": "https://github.com/Alan1034/LoadingMask"
   },
-  "typings": "./dist/index.d.ts",
-  "module": "./dist/index.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs",
-      "types": "./dist/index.d.ts"
-    },
-    "./style": "./dist/style.css"
-  },
-  "files": [
-    "/dist"
-  ]
+  "typings": "./publish/index.d.ts"
 }
