--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "variable-loading-mask",
   "version": "2.0.1",
   "description": "",
-  "main": "./src/index.ts",
+  "main": "./dist/index.umd.cjs",
   "type": "module",
   "scripts": {
     "build": "cross-env CURRENT_ENV=prod run-p type-check && run-p build-only",
@@ -48,5 +48,17 @@
     "type": "git",
     "url": "https://github.com/Alan1034/LoadingMask"
   },
-  "typings": "./publish/index.d.ts"
+  "typings": "./dist/index.d.ts",
+  "module": "./dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
+    },
+    "./style": "./dist/index.css"
+  },
+  "files": [
+    "/dist"
+  ]
 }
