--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "vue": "^3.5.21"
   },
   "peerDependencies": {
-    "vue": "^>=3.0.0"
+    "vue": ">=3.0.0"
   },
   "repository": {
     "type": "git",
